# RG

./: CMakeLists.txt  Makefile  README.md  fit.cpp  fit_config.txt  forwolfram_theorerr.txt  generate_net.cpp  generate_random.cpp  init_random.cpp  loop_Fit_Inputs.cpp  loop_Fit_Inputs_original.cpp  loop_configs.cpp  output_theorerr.txt  smdr_pdg_2025.h  theor_err.cpp
fit_outputs/: output_tree_111111_5,_:5_5_5_5_5_5_5.txt  output_tree_222222_5,_:5_5_5_5_5_5_5.txt  output_tree_333221_5,_:5_5_5_5_5_5_5.txt  output_tree_333333_5,_:5_5_5_5_5_5_5.txt  output_tree_444332_5,_:5_5_5_5_5_5_5.txt  output_tree_444333_5,_:5_5_5_5_5_5_5.txt
legacy/: assess_fit.cp  assess_fit.cpp  cursed.cpp  direct.cpp  direct_minimization.cpp  generate_net_orig.cpp  generate_random_orig.cpp  hybrid_minimization.cpp  init_random_orig.cpp
random_datas/: random_data.root
withSMDR/: CMakeLists.txt  a.out  my_Fit_Inputs.cpp  my_Fit_Inputs_original.cpp  random_data.root  withSMDRassessfit.cpp  withSMDRcursed.cpp  withSMDRdirect.cpp  withSMDRdirectOutput.txt  withSMDRfit.cpp  withSMDRgeneraterandom.cpp  withSMDRnMinuit.cpp  withSMDRnMinuitHybrid.cpp  withSMDRnMinuitRandom.cpp  withSMDRnROOTgeneratenet.cpp  withSMDRnROOTgeneratenetOrig.cpp  withSMDRnROOTgeneratenet_OLD.cpp  withSMDRnROOTgeneraterandom.cpp  withSMDRnROOTgeneraterandomOrig.cpp  withSMDRnROOTinitrandom.cpp  withSMDRnROOTinitrandomOrig.cpp  withSMDRtheorerr.cpp
withSMDR/fit_outputs/: output_tree_111111_5,_:5_5_5_5_5_5_5.txt  output_tree_222222_5,_:5_5_5_5_5_5_5.txt  output_tree_333221_5,_:5_5_5_5_5_5_5.txt  output_tree_444333_5,_:5_5_5_5_5_5_5.txt
wolfram/: Makefile  README.md  betas.m  fit_tables.nb  loops_compare.nb  parametric_N_theoretical.nb  phase_spaces.nb  tree_to_list.cpp  tree_to_list_config.txt
